agregue vert_path.ls()

--- a/01_datos_psda_2019.ipynb
+++ b/01_datos_psda_2019.ipynb
@@ -29,6 +29,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[WindowsPath('data_psda/Vertical/20191028_RefCellsVert.txt'),\n",
+       " WindowsPath('data_psda/Vertical/20191028_TempModVert.txt'),\n",
+       " WindowsPath('data_psda/Vertical/20191028_WindVertical.txt'),\n",
+       " WindowsPath('data_psda/Vertical/20191213_RefCellsVert.txt'),\n",
+       " WindowsPath('data_psda/Vertical/20191213_TempModVert.txt'),\n",
+       " WindowsPath('data_psda/Vertical/20191213_WindVertical.txt'),\n",
+       " WindowsPath('data_psda/Vertical/20191214_RefCellsVert.txt'),\n",
+       " WindowsPath('data_psda/Vertical/20191214_TempModVert.txt'),\n",
+       " WindowsPath('data_psda/Vertical/20191214_WindVertical.txt'),\n",
+       " WindowsPath('data_psda/Vertical/20191215_RefCellsVert.txt'),\n",
+       " WindowsPath('data_psda/Vertical/20191215_TempModVert.txt'),\n",
+       " WindowsPath('data_psda/Vertical/20191215_WindVertical.txt'),\n",
+       " WindowsPath('data_psda/Vertical/20191216_RefCellsVert.txt'),\n",
+       " WindowsPath('data_psda/Vertical/20191216_TempModVert.txt'),\n",
+       " WindowsPath('data_psda/Vertical/20191216_WindVertical.txt'),\n",
+       " WindowsPath('data_psda/Vertical/20191217_RefCellsVert.txt'),\n",
+       " WindowsPath('data_psda/Vertical/20191217_TempModVert.txt'),\n",
+       " WindowsPath('data_psda/Vertical/20191217_WindVertical.txt'),\n",
+       " WindowsPath('data_psda/Vertical/RefCellsVert.hdf'),\n",
+       " WindowsPath('data_psda/Vertical/TempModVert.hdf'),\n",
+       " WindowsPath('data_psda/Vertical/WindVertical.hdf')]"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vert_path.ls()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [],
